k8s/catalogue-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalogue-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catalogue-service
  template:
    metadata:
      labels:
        app: catalogue-service
    spec:
      containers:
        - name: catalogue-service
          image: catalogue-service:1.0
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
