k8s/commande-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: commande-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: commande-service
  template:
    metadata:
      labels:
        app: commande-service
    spec:
      containers:
        - name: commande-service
          image: commande-service:1.0
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
