k8s/config-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: config-service
  template:
    metadata:
      labels:
        app: config-service
    spec:
      containers:
        - name: config-service
          image: config-service:1.0
          imagePullPolicy: Never
          ports:
            - containerPort: 8888
