k8s/discovery-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discovery-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: discovery-service
  template:
    metadata:
      labels:
        app: discovery-service
    spec:
      containers:
        - name: discovery-service
          image: discovery-service:1.0
          imagePullPolicy: Never
          ports:
            - containerPort: 8761
