k8s/paiement-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paiement-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paiement-service
  template:
    metadata:
      labels:
        app: paiement-service
    spec:
      containers:
        - name: paiement-service
          image: paiement-service1.0
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
