k8s/catalogue-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalogue-service
spec:
  type: NodePort
  selector:
    app: catalogue-service
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30003
