k8s/commande-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: commande-service
spec:
  type: NodePort
  selector:
    app: commande-service
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30004
