k8s/config-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: config-service
spec:
  type: NodePort
  selector:
    app: config-service
  ports:
    - port: 8888
      targetPort: 8888
      nodePort: 30002
