k8s/discovery-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: discovery-service
spec:
  type: NodePort
  selector:
    app: discovery-service
  ports:
    - port: 8761
      targetPort: 8761
      nodePort: 30001
