k8s/paiement-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paiement-service
spec:
  type: NodePort
  selector:
    app: paiement-service
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30005
